--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./SHarish.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>G.AHAMED FAAZIL</h1>
+            <img src="suhail.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>B.SHEIK SUHAIL AHAMED</h1>
             <h2> II BSc Computer Science</h2>
             <h2> Khadir Mohideen College, Adirampattinam</h2>
         </div>
@@ -143,7 +143,7 @@
 
     
     <footer>
-        <p>&copy; 2025 S.Harish</p>
+        <p>&copy; 2025 B.Sheik SUHAIL Ahamed</p>
     </footer>
 
     <script>
